Callback http endpoints (#6)
